# study-program

./: run-valgrind.sh  run_build.sh
source/: CMakeLists.txt
source/include/: directory_ops.h  driver.h
source/src/: directory_ops.c  driver.c
source/study-docs/: cmake.txt
